--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body, p, h1, h2 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 8px 260px;
+    padding: 18px 260px;
 }
 
 .header h1 {
@@ -79,10 +79,6 @@ body, p, h1, h2 {
     color: var(--secondary-color);
 }
 
-.left-hero {
-
-}
-
 .right-hero {
     width: 500px;
     height: 300px;
@@ -115,6 +111,35 @@ body, p, h1, h2 {
     font-size: 36px;
     font-weight: 900;
     color: var(--dark-color);
+    margin-bottom: 45px;
+}
+
+.card-wrap {
+    display: flex;
+    justify-content: space-around;
+    gap: 60px;
+}
+
+.people-wrap {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 180px;
+    text-align: center;
+    color: var(--dark-color);
+    font-size: 18px;
+}
+
+.carrousel img {
+    width: 100%;
+    height: 180px;
+    object-fit: cover;
+    border-radius: 12px;
+    border: solid var(--alternative-color);
+}
+
+.carrousel p {
+    padding: 8px 2px;
 }
 
 .quote-wrap {
@@ -141,6 +166,42 @@ body, p, h1, h2 {
     padding-right: 48px;
 }
 
+.cta-wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.cta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 80px;
+    padding: 45px 100px;
+    width: 100%;
+    background-color: var(--alternative-color);
+    border-radius: 9px;
+    color: var(--light-color);
+}
+
+.cta h2 {
+    font-size: 28px;
+}
+
+.cta p {
+    font-size: 18px;
+    font-weight: 300;
+}
+
+.sign-up {
+    font-size: 18px;
+    font-weight: 700;
+    color: var(--light-color);
+    background-color: var(--alternative-color);
+    border: 2px solid white;
+    border-radius: 7px;
+    padding: 6px 32px;
+}
 
 .footer {
     display: flex;
@@ -148,4 +209,5 @@ body, p, h1, h2 {
     justify-content: center;
     background-color: var(--dark-color);
     color: var(--secondary-color);
+    padding: 36px 0;
 }
